0025246: Make methods Intervals and NbIntervals const in Adaptor3d_Curve and it descendants

Qualifier "const" added to NbIntervals and Intervals functions.

Fixed Standard_OVERRIDE macro description
Removed obsolete method declaration from Standard_Transient.cdl